reemplazado Stream.collect(Collectors.toList()) por Stream.toList()